--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jiti": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
     "zod": "^4.0.17"
@@ -26,8 +28,10 @@
     "@eslint/js": "^9.33.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.2.1",
     "eslint": "^9.33.0",
     "globals": "^16.3.0",
